--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,4 +36,4 @@ bind -n C-a send-prefix
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+#run '~/.tmux/plugins/tpm/tpm'
