--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -1,5 +1,6 @@
 import = [
-    "~/.config/alacritty/themes/tokyo-night.toml"
+    "~/.config/alacritty/themes/tokyo-night.toml",
+    #"~/.config/alacritty/themes/atom_one_light.toml"
 ]
 
 [font]
