--- a/config/leftwm/themes/Ascent/polybar.config
+++ b/config/leftwm/themes/Ascent/polybar.config
@@ -32,8 +32,8 @@ font-0 = FiraCode Nerd Font:style=Bold:size=14;1
 separator = "|"
 separator-foreground = ${colors.pn-light}
 modules-left = ewmh xwindow
-modules-center = date time battery
-modules-right = vpn network volume cpu
+modules-center = date time battery xkeyboard
+modules-right = backlight network volume cpu memory
 
 [module/xwindow]
 type = internal/xwindow
@@ -64,7 +64,7 @@ date = " %I:%M %p "
 [module/cpu]
 type = internal/cpu
 interval = 0.5
-label = " CPU: %percentage:2%% "
+label = " : %percentage:2%% "
 label-foreground = ${colors.f-bright}
 
 [module/volume]
@@ -72,7 +72,7 @@ type = internal/pulseaudio
 master-soundcard = default
 speaker-soundcard = default
 headphone-soundcard = default
-label-volume = " VOL: %percentage:2%% "
+label-volume = " 󰕾 %percentage:2%% "
 label-volume-foreground = ${colors.f-mint}
 
 [module/network]
@@ -84,7 +84,7 @@ label-disconnected = " not connected "
 label-disconnected-foreground = ${colors.a-red}
 format-disconnected = <label-disconnected>
 
-label-connected = " %{F#a3be8c}↓ %{F#d8dee9}%downspeed:9%%{F#4c566a} | %{F#88c0d0}↑ %{F#d8dee9}%upspeed:9%%{F-} "
+label-connected = " %{F#a3be8c}↓ %{F#d8dee9}%downspeed:5%%{F#4c566a} | %{F#88c0d0}↑ %{F#d8dee9}%upspeed:5%%{F-} "
 format-connected = <label-connected>
 
 [module/battery]
@@ -210,3 +210,197 @@ format-connected = <label-connected>
   animation-low-0 = !
   animation-low-1 = 
   animation-low-framerate = 200
+
+[module/backlight]
+  type = internal/backlight
+
+  ; Use the following command to list available cards:
+  ; $ ls -1 /sys/class/backlight/
+  ; Default: first usable card in /sys/class/backlight (new in version 3.7.0)
+  card = nvidia_wmi_ec_backlight
+
+  ; Use the `/sys/class/backlight/.../actual-brightness` file
+  ; rather than the regular `brightness` file.
+  ; New in version 3.6.0
+  ; Changed in version: 3.7.0: Defaults to true also on amdgpu backlights
+  ; Default: true
+  use-actual-brightness = true
+
+  ; Interval in seconds after which after which the current brightness is read
+  ; (even if no update is detected).
+  ; Use this as a fallback if brightness updates are not registering in polybar
+  ; (which happens if the use-actual-brightness is false).
+  ; There is no guarantee on the precisio of this timing.
+  ; Set to 0 to turn off
+  ; New in version 3.7.0
+  ; Default: 0 (5 if use-actual-brightness is false)
+  poll-interval = 0
+
+  ; Enable changing the backlight with the scroll wheel
+  ; NOTE: This may require additional configuration on some systems. Polybar will
+  ; write to `/sys/class/backlight/${self.card}/brightness` which requires polybar
+  ; to have write access to that file.
+  ; DO NOT RUN POLYBAR AS ROOT. 
+  ; The recommended way is to add the user to the
+  ; `video` group and give that group write-privileges for the `brightness` file.
+  ; See the ArchWiki for more information:
+  ; https://wiki.archlinux.org/index.php/Backlight#ACPI
+  ; Default: false
+  enable-scroll = true
+
+  ; Interval for changing the brightness (in percentage points).
+  ; New in version 3.7.0
+  ; Default: 5
+  scroll-interval = 10
+
+  ; Available tags:
+  ;   <label> (default)
+  ;   <ramp>
+  ;   <bar>
+  format = <label> <bar>
+
+  ; Available tokens:
+  ;   %percentage% (default)
+  label = %percentage%%
+
+  ; Only applies if <ramp> is used
+  ramp-0 = 🌕
+  ramp-1 = 🌔
+  ramp-2 = 🌓
+  ramp-3 = 🌒
+  ramp-4 = 🌑
+
+  ; Only applies if <bar> is used
+  bar-width = 7
+  bar-indicator = |
+  bar-fill = ─
+  bar-empty = ─
+
+
+[module/memory]
+  type = internal/memory
+
+  ; Seconds to sleep between updates
+  ; Default: 1
+  interval = 3
+
+  ; Default: 90
+  ; New in version 3.6.0
+  warn-percentage = 90
+
+
+  ; Available tags:
+  ;   <label> (default)
+  ;   <bar-used>
+  ;   <bar-free>
+  ;   <ramp-used>
+  ;   <ramp-free>
+  ;   <bar-swap-used>
+  ;   <bar-swap-free>
+  ;   <ramp-swap-used>
+  ;   <ramp-swap-free>
+  format = <label> <bar-used>
+
+  ; Format used when RAM reaches warn-percentage
+  ; If not defined, format is used instead.
+  ; Available tags:
+  ;   <label-warn>
+  ;   <bar-used>
+  ;   <bar-free>
+  ;   <ramp-used>
+  ;   <ramp-free>
+  ;   <bar-swap-used>
+  ;   <bar-swap-free>
+  ;   <ramp-swap-used>
+  ;   <ramp-swap-free>
+  ; New in version 3.6.0
+  ;format-warn = <label-warn>
+
+  ; Available tokens:
+  ;   %percentage_used% (default)
+  ;   %percentage_free%
+  ;   %used% (Switches between KiB, MiB, and GiB) (New in version 3.6.0)
+  ;   %free% (Switches between KiB, MiB, and GiB) (New in version 3.6.0)
+  ;   %total% (Switches between KiB, MiB, and GiB) (New in version 3.6.0)
+  ;   %gb_used%
+  ;   %gb_free%
+  ;   %gb_total%
+  ;   %mb_used%
+  ;   %mb_free%
+  ;   %mb_total%
+  ;   %percentage_swap_used%
+  ;   %percentage_swap_free%
+  ;   %swap_total% (Switches between KiB, MiB, and GiB) (New in version 3.6.0)
+  ;   %swap_free% (Switches between KiB, MiB, and GiB) (New in version 3.6.0)
+  ;   %swap_used% (Switches between KiB, MiB, and GiB) (New in version 3.6.0)
+  ;   %gb_swap_total%
+  ;   %gb_swap_free%
+  ;   %gb_swap_used%
+  ;   %mb_swap_total%
+  ;   %mb_swap_free%
+  ;   %mb_swap_used%
+  label =   %gb_used%/%gb_free%
+
+  ; Available tokens:
+  ;   %percentage_used% (default)
+  ;   %percentage_free%
+  ;   %used% (Switches between KiB, MiB, and GiB) (New in version 3.6.0)
+  ;   %free% (Switches between KiB, MiB, and GiB) (New in version 3.6.0)
+  ;   %total% (Switches between KiB, MiB, and GiB) (New in version 3.6.0)
+  ;   %gb_used%
+  ;   %gb_free%
+  ;   %gb_total%
+  ;   %mb_used%
+  ;   %mb_free%
+  ;   %mb_total%
+  ;   %percentage_swap_used%
+  ;   %percentage_swap_free%
+  ;   %swap_total% (Switches between KiB, MiB, and GiB) (New in version 3.6.0)
+  ;   %swap_free% (Switches between KiB, MiB, and GiB) (New in version 3.6.0)
+  ;   %swap_used% (Switches between KiB, MiB, and GiB) (New in version 3.6.0)
+  ;   %gb_swap_total%
+  ;   %gb_swap_free%
+  ;   %gb_swap_used%
+  ;   %mb_swap_total%
+  ;   %mb_swap_free%
+  ;   %mb_swap_used%
+  ; New in version 3.6.0
+  label-warn = RAM %gb_used%/%gb_free%
+
+  ; Only applies if <bar-used> is used
+  bar-used-indicator =
+  bar-used-width = 7
+  bar-used-foreground-0 = #55aa55
+  bar-used-foreground-1 = #557755
+  bar-used-foreground-2 = #f5a70a
+  bar-used-foreground-3 = #ff5555
+  bar-used-fill = ▐
+  bar-used-empty = ▐
+  bar-used-empty-foreground = #444444
+
+  ; Only applies if <ramp-used> is used
+  ramp-used-0 = ▁
+  ramp-used-1 = ▂
+  ramp-used-2 = ▃
+  ramp-used-3 = ▄
+  ramp-used-4 = ▅
+  ramp-used-5 = ▆
+  ramp-used-6 = ▇
+  ramp-used-7 = █
+
+  ; Only applies if <ramp-free> is used
+  ramp-free-0 = ▁
+  ramp-free-1 = ▂
+  ramp-free-2 = ▃
+  ramp-free-3 = ▄
+  ramp-free-4 = ▅
+  ramp-free-5 = ▆
+  ramp-free-6 = ▇
+  ramp-free-7 = █
+
+[module/xkeyboard]
+  type = internal/xkeyboard
+
+  ; List of indicators to ignore
+  blacklist-0 = num lock
+  blacklist-1 = scroll lock
