--- a/config/leftwm/themes/Ascent/polybar.config
+++ b/config/leftwm/themes/Ascent/polybar.config
@@ -35,6 +35,12 @@ modules-left = ewmh xwindow
 modules-center = temperature date time battery xkeyboard
 modules-right = backlight backlight_nvidia bluetooth network network_0 volume cpu memory
 
+#[module/bluetooth-simple]
+#type = custom/script
+##exec = ~/.config/polybar/bluetooth-simple.sh
+#exec = ~/.config/leftwm/themes/current/bluetooth-simple.sh
+#interval = 5
+
 [module/bluetooth]
 type = custom/script
 exec = ~/.config/leftwm/themes/current/system-bluetooth-bluetoothctl.sh &
