--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ remotes/**/result
 **/.terraform/*
 
 # .tfstate files
-*.tfstate
-*.tfstate.*
+#*.tfstate
+#*.tfstate.*
 
 # Crash log files
 crash.log
