--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.tfstate.backup filter=git-crypt diff=git-crypt
 *-secret.yaml filter=git-crypt diff=git-crypt
 secret-* filter=git-crypt diff=git-crypt
+.envrc filter=git-crypt diff=git-crypt
