--- a/config/leftwm/themes/Ascent/polybar.config
+++ b/config/leftwm/themes/Ascent/polybar.config
@@ -76,14 +76,14 @@ label-empty-foreground = ${colors.foreground}
 [module/cpu]
   type = internal/cpu
   interval = 0.5
-  label = " :  %percentage:2%% "
+  label = " : %percentage:2%% "
   label-foreground = ${colors.f-bright}
 
 [module/volume]
   type = internal/pulseaudio
-  master-soundcard = default
-  speaker-soundcard = default
-  headphone-soundcard = default
+  #master-soundcard = default
+  #speaker-soundcard = default
+  #headphone-soundcard = default
   label-volume = " 󰕾 %percentage:2%% "
   label-volume-foreground = ${colors.f-mint}
 
